[gd_scene load_steps=15 format=2]

[ext_resource path="res://art/map/map.png" type="Texture" id=1]
[ext_resource path="res://art/component/background_m.png" type="Texture" id=2]
[ext_resource path="res://font/title.tres" type="DynamicFont" id=3]
[ext_resource path="res://scene/component/btn_normal.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/interface/map.gd" type="Script" id=5]
[ext_resource path="res://art/component/btn_map_disable.png" type="Texture" id=6]
[ext_resource path="res://art/component/btn_map_selected.png" type="Texture" id=7]
[ext_resource path="res://art/component/btn_map.png" type="Texture" id=8]
[ext_resource path="res://theme.tres" type="Theme" id=9]
[ext_resource path="res://font/freepixel.ttf" type="DynamicFontData" id=13]

[sub_resource type="InputEventKey" id=1]
scancode = 77

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=4]
size = 21
font_data = ExtResource( 13 )

[node name="map" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -357.0
margin_top = -230.0
margin_right = 357.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 92.252, 79.6331 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="image" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.0
margin_top = -126.0
margin_right = 237.0
margin_bottom = 126.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_left = 457.587
margin_top = 122.26
margin_right = 536.587
margin_bottom = 165.26
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.372549, 0, 0, 1 )
text = "Mapa"

[node name="back" parent="." instance=ExtResource( 4 )]
margin_left = 421.841
margin_top = 445.111
margin_right = 329.521
margin_bottom = 426.311
shortcut_in_tooltip = false
shortcut = SubResource( 2 )

[node name="laboratory" type="TextureButton" parent="."]
margin_left = 342.698
margin_top = 348.294
margin_right = 358.698
margin_bottom = 364.294
rect_scale = Vector2( 2, 2 )
hint_tooltip = "Laboratório (Tutorial)"
theme = ExtResource( 9 )
disabled = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="forest" type="TextureButton" parent="."]
margin_left = 450.576
margin_top = 308.588
margin_right = 466.576
margin_bottom = 324.588
rect_scale = Vector2( 2, 2 )
hint_tooltip = "Floresta das Variáveis"
theme = ExtResource( 9 )
disabled = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mountain" type="TextureButton" parent="."]
margin_left = 437.092
margin_top = 211.198
margin_right = 453.092
margin_bottom = 227.198
rect_scale = Vector2( 2, 2 )
hint_tooltip = "Montanha dos Operadores"
theme = ExtResource( 9 )
disabled = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="beach" type="TextureButton" parent="."]
margin_left = 612.394
margin_top = 335.558
margin_right = 628.394
margin_bottom = 351.558
rect_scale = Vector2( 2, 2 )
hint_tooltip = "Praia das Condicionais"
theme = ExtResource( 9 )
disabled = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desert" type="TextureButton" parent="."]
margin_left = 602.655
margin_top = 276.375
margin_right = 618.655
margin_bottom = 292.375
rect_scale = Vector2( 2, 2 )
hint_tooltip = "Deserto do Controle"
theme = ExtResource( 9 )
disabled = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boss" type="TextureButton" parent="."]
margin_left = 661.089
margin_top = 273.378
margin_right = 677.089
margin_bottom = 289.378
rect_scale = Vector2( 2, 2 )
hint_tooltip = "Boss (Bubble Sort)"
theme = ExtResource( 9 )
disabled = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box_confirm" type="TextureRect" parent="."]
visible = false
margin_left = 274.0
margin_top = 212.0
margin_right = 734.0
margin_bottom = 365.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="Label" parent="box_confirm"]
margin_left = 60.522
margin_top = 23.7491
margin_right = 450.522
margin_bottom = 54.7491
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Deseja realizar uma viagem rápida para:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="local" type="Label" parent="box_confirm"]
margin_left = 41.0
margin_top = 48.0503
margin_right = 424.0
margin_bottom = 79.0503
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.843137, 0.0313726, 0.0313726, 1 )
text = "Mapa"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox_container" type="HBoxContainer" parent="box_confirm"]
anchor_left = 0.169565
anchor_top = 0.575163
anchor_right = 0.987
anchor_bottom = 0.824
margin_left = -35.0
margin_top = -2.00001
margin_right = -223.02
margin_bottom = -21.072
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes" parent="box_confirm/hbox_container" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 92.0
margin_bottom = 19.0
rect_scale = Vector2( 1, 1 )

[node name="no" parent="box_confirm/hbox_container" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.0
margin_right = 188.0
margin_bottom = 19.0
rect_scale = Vector2( 1, 1 )

[node name="tween" type="Tween" parent="."]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="laboratory" to="." method="_on_laboratory_pressed"]
[connection signal="pressed" from="forest" to="." method="_on_forest_pressed"]
[connection signal="pressed" from="mountain" to="." method="_on_mountain_pressed"]
[connection signal="pressed" from="beach" to="." method="_on_beach_pressed"]
[connection signal="pressed" from="desert" to="." method="_on_desert_pressed"]
[connection signal="pressed" from="boss" to="." method="_on_boss_pressed"]
[connection signal="pressed" from="box_confirm/hbox_container/yes" to="." method="_on_travel_yes_pressed"]
[connection signal="pressed" from="box_confirm/hbox_container/no" to="." method="_on_travel_no_pressed"]
[connection signal="tween_completed" from="tween" to="." method="_on_tween_completed"]
